--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ nav {
    margin: 20px;
     display: flex;
     padding: 10px;
+    border: 4px solid white;
     border-radius: 20px;
 }
 h1 {
@@ -60,4 +61,29 @@ main {
 }
 h2, h3 {
     margin: 0px;
+}
+/* portfolio styles */
+.content h1 {
+    color: black;
+}
+
+#portfolio {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+#portfolio li {
+    background: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+#portfolio li:hover {
+    background: #eee;
+}
+
+#portfolio a {
+    text-decoration: none;
+    color: #454545;
 }
