--- a/style.css
+++ b/style.css
@@ -41,6 +41,9 @@ a {
 main {
     background: rgb(245, 238, 219);
     display: flex;
+    padding: 10px;
+    border: 4px solid black;
+    border-radius: 20px;
 }
 .sidebar {
     margin-right: 25px;
